<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="@dimen/size30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size100dp"
                android:layout_marginRight="@dimen/size100dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/pink"
                android:textSize="@dimen/text20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            >

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size300dp"
                />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size48dp"
                android:layout_alignBottom="@id/view_pager"
                android:layout_marginBottom="@dimen/size48dp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size100dp"
            android:layout_marginRight="@dimen/size100dp"
            android:text="@string/create_event"
            android:textStyle="bold"
            android:backgroundTint="@color/pink" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size20dp"
            android:columnCount="2"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size15dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="@dimen/size8dp"
                app:cardElevation="@dimen/size8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/size181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size170dp"
                        android:layout_height="@dimen/size100dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_error"
                        android:src="@drawable/family"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Family"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size15dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="@dimen/size8dp"
                app:cardElevation="@dimen/size8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/size181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size170dp"
                        android:layout_height="@dimen/size100dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_error"
                        android:src="@drawable/birthday"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BirthDay"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size15dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="@dimen/size8dp"
                app:cardElevation="@dimen/size8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/size181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size170dp"
                        android:layout_height="@dimen/size100dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_error"
                        android:src="@drawable/wedding"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Wedding"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size15dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="@dimen/size8dp"
                app:cardElevation="@dimen/size8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/size181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size170dp"
                        android:layout_height="@dimen/size100dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_error"
                        android:src="@drawable/holiday"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Holiday"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size15dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="@dimen/size8dp"
                app:cardElevation="@dimen/size8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/size181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size170dp"
                        android:layout_height="@dimen/size100dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_error"
                        android:src="@drawable/graduation"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Graduation"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size15dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="@dimen/size8dp"
                app:cardElevation="@dimen/size8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="@dimen/size181dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size170dp"
                        android:layout_height="@dimen/size100dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_error"
                        android:src="@drawable/baby"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Baby"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size13dp"
            android:layout_marginTop="@dimen/size40dp"
            android:text="@string/our_package"
            android:textSize="@dimen/size20dp"
            android:textStyle="bold"
            android:fontFamily="@font/proximanovaregular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/package_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size40dp"
            android:text="@string/visit_this_beautiful_location"
            android:layout_marginLeft="@dimen/size13dp"
            android:textSize="@dimen/size20dp"
            android:textStyle="bold"
            android:fontFamily="@font/proximanovaregular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/location_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>